# rtm-ros-robotics

./: rtm-ros-robotics.rosinstall
agentsystem_examples/rosjava/: Makefile
agentsystem_examples/scripts/: add_two_ints_client.py  listener.py
agentsystem_examples/src/: listener.cpp  talker.cpp
agentsystem_examples/xmlrpc/: Makefile
agentsystem_hironx_samples/Sense/: manifest.xml
agentsystem_hironx_samples/Sense/launch/: lhand_aist.launch  rhand.launch  rhand_checker_board_aist.launch  rhand_checkerboard.launch  sense.launch  sense_hiro.launch  (+1 more)
agentsystem_hironx_samples/iv_bridges/: manifest.xml
agentsystem_hironx_samples/iv_plan/: CMakeLists.txt  manifest.xml  rosdep.yaml
agentsystem_hironx_samples/piece_recog/: README
agentsystem_hironx_samples/puzzle_color/: CMakeLists.txt  README  mainpage.dox  manifest.xml  proc-gmm.py  proc-learn-gmm.py
agentsystem_hironx_samples/puzzle_color/data/: cat.py
agentsystem_hironx_samples/puzzle_color/include/: brown_lab.h  brown_rgb.h  colorlib-lab.h  colorlib-rgb.h  colorlib.h  green_lab.h  green_rgb.h  limegreen_lab.h  limegreen_rgb.h  purple_lab.h  purple_rgb.h  red_rgb.h  table_lab.h  table_rgb.h  waterblue_lab.h  waterblue_rgb.h  yellow_lab.h
agentsystem_hironx_samples/puzzle_color/src/: CopyParam.h  Test_color.cpp  Test_color_gmm.cpp  Test_get_region.cpp  Test_gmm.cpp  Test_learn.cpp  Test_rgb.cpp
agentsystem_hironx_samples/semi/: hironxtable.env.xml  init.py  main.py  mytest3.py  mytest4.py  plan.py  recognize.py  semi-hironx.dae  traj.txt
agentsystem_openrave_tutorials/touchplanning/: touchplanning.py
agentsystem_ros_tutorials/: rtm-ros-robotics.rosinstall
agentsystem_ros_tutorials/agentsystem_examples/: mainpage.dox  manifest.xml
agentsystem_ros_tutorials/agentsystem_ros_tutorials/: package.xml
agentsystem_ros_tutorials/move_base_stage_tutorial/: CMakeLists.txt  package.xml
agentsystem_ros_tutorials/move_base_stage_tutorial/config/: local_costmap_params.yaml  rviz.vcg
agentsystem_ros_tutorials/move_base_stage_tutorial/launch/: amcl_node.launch  rviz.launch
agentsystem_ros_tutorials/move_base_stage_tutorial/script/: send_velocity.py
agentsystem_ros_tutorials/move_base_stage_tutorial/world/: willow.world
agentsystem_ros_tutorials/opencv_fitting/: CMakeLists.txt  manifest.xml
agentsystem_ros_tutorials/opencv_fitting/include/: fitting.h
agentsystem_ros_tutorials/opencv_fitting/test/: CMakeLists.txt  testfitting.cpp
agentsystem_ros_tutorials/opencv_ros_bridge_tutorial/: CMakeLists.txt  manifest.xml
move_base_stage_tutorial/: package.xml
move_base_stage_tutorial/config/: base_local_planner_params.yaml  rviz.rviz
move_base_stage_tutorial/launch/: amcl_node.launch
move_base_stage_tutorial/script/: send_goal.py
move_base_stage_tutorial/world/: willow.yaml
mrobot_ros_bridge/launch/: SimulationProject.xml
opencv_fitting/src/: fitting.cpp
opencv_fitting/test/: CMakeLists.txt  testfitting.py
opencv_ros_bridge_tutorial/cfg/: ImageTracking.cfg
opencv_ros_bridge_tutorial/src/: image_flip.cpp  publish_screenpoint.py  publish_screenpoint.sh
openhrp3/: CMakeLists.txt  Makefile.openhrp3
openrave_hw4/: test.env.xml  touchplanning.py
openrtm_apps/iis_idl/: manifest.xml
rst/: 3D_puzzle_project.rst  Appendix.rst  CreatePrivateRepository.rst  HIRO_Example.rst  HIRO_Install.rst  Homework_2.rst  Homework_3.rst  Homework_4.rst  Homework_5.rst  Homework_List.rst  Introduction.rst  Makefile  OpenRAVE_Example.rst  OpenRave.rst  ROS.rst  ROS_English.rst  ROS_Example.rst  ROS_Example_ImageProcessing.rst  ROS_Example_Navigation.rst  ROS_Example_OpenHRPIntegration.rst  ROS_Example_RTMIntegration.rst  ROS_Example_RTMNavigation.rst  ROS_Example_RecognitionAction.rst  ROS_Example_TroubleShooting.rst  ROS_Install.rst  ROS_Jenkins.rst  RTM.rst  RTMEXT_Tutorial.rst  RTM_2DSimulator_Example.rst  RTM_Example.rst  RTM_Example_Communication.rst  RTM_Example_ImageProcessing.rst  RTM_Example_Imgidl.rst  RTM_Example_ReferenceHardwareSimulation.rst  RTM_HelloWorldSample.rst  RTM_Install.rst  Robot-development.rst  Robot-environment.rst  Robot-situation.rst  SideNav.rst  (+11 more)
rst/figs/: openrave_libraries_jp.dia  openrave_robot_jp.dia  test_component.dia
rst/images/: test_component.eps
rst/source/: conf.py  index.rst
rtmros_common/: jenkins_latest.sh
rtmros_common/beego_navigation/: akiba.pgm  akiba.yaml  beego-connect.py  beego_ros_bridge.launch  load_map.xml  setup_kinect.launch  start_make_map.launch  start_nav_beego.launch  start_rosbag.launch
rtmros_common/hrpsys/: Makefile.hrpsys-base
rtmros_common/openhrp3/: Makefile  Makefile.openhrp-aist-grx  Makefile.openhrp3
tags/agentsystem_ros_tutorials-1.0.1/: stack.xml
tags/agentsystem_ros_tutorials-1.0.1/opencv_fitting/: CMakeLists.txt  mainpage.dox
tags/agentsystem_ros_tutorials-1.0.1/opencv_fitting/include/: fitting.h
tmp/robot-document/: Conclusion.rst  Contents.rst  Introduction.rst  Makefile  OpenRave.rst  Robot-development.rst  Robot-situation.rst  rst2pdf_default.style
trunk/agentsystem_hironx_samples/: rosdep.yaml  stack.xml
trunk/agentsystem_ros_tutorials/: rtm-ros-robotics.rosinstall
trunk/openhrp3/: Makefile.colladadom  manifest.xml  rosdep.yaml
wiki/: 20120613.wiki  20120620.wiki  20120711.wiki  2013_1week_project.wiki  2013_Homework_1.wiki  2013_Homework_2.wiki  2013_Homework_3.wiki  2013_Homework_4.wiki  2013_Homework_5.wiki  2013_Homework_6.wiki  2013_Homework_7.wiki  2013_Homework_8.wiki  2013_Report.wiki  3D_puzzle_project.wiki  3D_puzzle_project2.wiki  AgentSystemBook.wiki  CreatePrivateRepository.wiki  HIRO_Example.wiki  HIRO_Install.wiki  HIRO_Workshop.wiki  Homework_2.wiki  Homework_3.wiki  Homework_4.wiki  Homework_5.wiki  Homework_List.wiki  InstallRtmrosBasedSoftwareOnQNX.wiki  KinectSample.wiki  NAO_Install.wiki  OpenRAVE_Example.wiki  PCL.wiki  PCL_Install.wiki  PCL_USE_CMAKELISTS_TXT.wiki  PageName.wiki  PclOpenniTracking.wiki  ROSRemoteDaihenSystem.wiki  ROS_English.wiki  ROS_Example.wiki  ROS_Example_Android_Applications.wiki  ROS_Example_Basic.wiki  ROS_Example_Commands.wiki  (+92 more)
wiki/test/: test.wiki
(+296 files in other folders)
