<?xml version="1.0"?>
<package>
  <name>agentsystem_ros_tutorials</name>
  <version>1.0.1</version>
  <description>agentsystem_ros_tutorials meta package.</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Saito</maintainer>
  <author>Kei Okada</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/move_base_stage_tutorial</url>
  <url type="repository">https://rtm-ros-robotics.googlecode.com/svn/trunk/agentsystem_ros_tutorials</url>
  <url type="bugtracker">https://code.google.com/p/rtm-ros-robotics/issues/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>move_base_stage_tutorial</run_depend>

  <export>
   <metapackage/>
  </export>
</package>