<package>
  <name>move_base_stage_tutorial</name>
  <version>1.0.0</version>
  <description>move_base_stage_tutorial</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/move_base_stage_tutorial</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rviz</run_depend>
  <run_depend>stage</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>

  <export>
  </export>
</package>
